testsuite/gnatprove/tests/ug__exceptions_bad/test.out

exceptions_bad.adb:16:25: error: formal parameter of mode "in out" cannot appear in consequence of Exceptional_Cases
   16 |                        A (I) = (if I < Index then A'Old (I) + 1 else A'Old (I))));
      |                        ^ here
  only parameters passed by reference are allowed
gnatprove: error during generation of Global contracts
